Corrected spelling mistake

--- a/docs/glfwug.tex
+++ b/docs/glfwug.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------
 % GLFW Users Guide
 % API Version: 2.4
-% $Id: glfwug.tex,v 1.8 2003-11-22 21:29:27 marcus256 Exp $
+% $Id: glfwug.tex,v 1.9 2004-01-06 09:00:57 marcus256 Exp $
 %-------------------------------------------------------------------------
 
 % Document class
@@ -1226,7 +1226,7 @@ is an example of how to check for the extension GL\_ARB\_multitexture:
 
 
 %-------------------------------------------------------------------------
-\section{Runtime Time Check}
+\section{Runtime Check}
 Even if the compiler include files have defined all the necessary tokens,
 the target system may not support the extension (perhaps it has a
 different graphic card with a different \OpenGL\ implementation, or it has
