Tables are now on separate pages (not embedded in main text)

--- a/docs/glfwrm.tex
+++ b/docs/glfwrm.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------
 % GLFW Reference Manual
 % API Version: 2.4
-% $Id: glfwrm.tex,v 1.12 2004-01-13 20:02:52 marcus256 Exp $
+% $Id: glfwrm.tex,v 1.13 2004-01-31 20:15:15 marcus256 Exp $
 %-------------------------------------------------------------------------
 
 % Document class
@@ -304,7 +304,7 @@ In order to determine the actual properties of an opened window, use
 
 
 %-------------------------------------------------------------------------
-\begin{table}[bhtp]
+\begin{table}[p]
 \begin{center}
 \begin{tabular}{|l|l|p{7.0cm}|} \hline \raggedright
 \textbf{Name}            & \textbf{Default} & \textbf{Description} \\ \hline
@@ -620,7 +620,7 @@ fullscreen mode, then the fullscreen video mode will be restored.
 
 
 %-------------------------------------------------------------------------
-\begin{table}[bhtp]
+\begin{table}[p]
 \begin{center}
 \begin{tabular}{|l|p{9.5cm}|} \hline \raggedright
 \textbf{Name}            & \textbf{Description} \\ \hline
@@ -893,7 +893,7 @@ there is no need to call \textbf{glfwPollEvents}.
 
 
 %-------------------------------------------------------------------------
-\begin{table}[bhtp]
+\begin{table}[p]
 \begin{center}
 \begin{tabular}{|l|l|} \hline \raggedright
 \textbf{Name}             & \textbf{Description} \\ \hline
@@ -1368,7 +1368,7 @@ Mouse wheel events are recorded continuously, but only reported when
 
 
 %-------------------------------------------------------------------------
-\begin{table}[bhtp]
+\begin{table}[p]
 \begin{center}
 \begin{tabular}{|l|l|}\hline \raggedright
 \textbf{Name} & \textbf{Return value}\\ \hline
@@ -1626,7 +1626,7 @@ images from files.
 
 
 %-------------------------------------------------------------------------
-\begin{table}[bhtp]
+\begin{table}[p]
 \begin{center}
 \begin{tabular}{|l|p{9.0cm}|} \hline \raggedright
 \textbf{Name}          & \textbf{Description}\\ \hline
@@ -1735,7 +1735,7 @@ once the image is not needed anymore.
 
 
 %-------------------------------------------------------------------------
-\begin{table}[bhtp]
+\begin{table}[p]
 \begin{center}
 \begin{tabular}{|l|p{9.0cm}|} \hline \raggedright
 \textbf{Name}             & \textbf{Description}\\ \hline
@@ -2386,7 +2386,7 @@ each feature.
 \end{refdescription}
 
 
-\begin{table}[bhtp]
+\begin{table}[p]
 \begin{center}
 \begin{tabular}{|l|p{5.0cm}|p{3.0cm}|} \hline \raggedright
 \textbf{Name} & \textbf{Controls} & \textbf{Default}\\ \hline
