--- a/docs/glfwrm.tex
+++ b/docs/glfwrm.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------
 % GLFW Reference Manual
 % API Version: 2.5
-% $Id: glfwrm.tex,v 1.14 2004-02-28 12:50:15 marcus256 Exp $
+% $Id: glfwrm.tex,v 1.15 2004-04-11 11:14:03 marcus256 Exp $
 %-------------------------------------------------------------------------
 
 % Document class
@@ -396,6 +396,64 @@ context.
 
 
 %-------------------------------------------------------------------------
+\subsection{glfwSetWindowCloseCallback}
+
+\textbf{C language syntax}
+\begin{lstlisting}
+void glfwSetWindowCloseCallback( GLFWwindowclosefun cbfun )
+\end{lstlisting}
+
+\begin{refparameters}
+\begin{description}
+\item [\textit{cbfun}]\ \\
+  Pointer to a callback function that will be called when a user requests
+  that the window should be closed, typically by clicking the window close
+  icon (e.g. the cross in the upper right corner of a window under
+  Microsoft Windows). The function should have the following C language
+  prototype:
+
+  \texttt{int GLFWCALL functionname( void );}
+
+  Where \textit{functionname} is the name of the callback function. The
+  return value of the callback function indicates wether or not the window
+  close action should continue. If the function returns GL\_TRUE, the
+  window will be closed. If the function returns GL\_FALSE, the window
+  will not be closed.
+
+  If \textit{cbfun} is NULL, any previously selected callback function
+  will be deselected.
+\end{description}
+\end{refparameters}
+
+\begin{refreturn}
+none
+\end{refreturn}
+
+\begin{refdescription}
+The function selects which function to be called upon a window close
+event.
+
+A window has to be opened for this function to have any effect.
+\end{refdescription}
+
+\begin{refnotes}
+Window close events are recorded continuously, but only reported when
+\textbf{glfwPollEvents}, \textbf{glfwWaitEvents} or
+\textbf{glfwSwapBuffers} is called.
+
+The \OpenGL\ context is still valid when this function is called.
+
+Note that the window close callback function is not called when
+\textbf{glfwCloseWindow} is called, but only when the close request
+comes from the window manager.
+
+Do \emph{not} call \textbf{glfwCloseWindow} from a window close
+callback function. Close the window by returning GL\_TRUE from the
+function.
+\end{refnotes}
+
+
+%-------------------------------------------------------------------------
 \subsection{glfwSetWindowTitle}
 
 \textbf{C language syntax}
@@ -571,8 +629,8 @@ A window has to be opened for this function to have any effect.
 
 \begin{refnotes}
 Window size changes are recorded continuously, but only reported when
-\textbf{glfwPollEvents} or \textbf{glfwSwapBuffers} is called.
-
+\textbf{glfwPollEvents}, \textbf{glfwWaitEvents} or
+\textbf{glfwSwapBuffers} is called.
 \end{refnotes}
 
 
@@ -894,6 +952,44 @@ there is no need to call \textbf{glfwPollEvents}.
 
 
 %-------------------------------------------------------------------------
+\subsection{glfwWaitEvents}
+
+\textbf{C language syntax}
+\begin{lstlisting}
+void glfwWaitEvents( void )
+\end{lstlisting}
+
+\begin{refparameters}
+none
+\end{refparameters}
+
+\begin{refreturn}
+none
+\end{refreturn}
+
+\begin{refdescription}
+The function is used for waiting for events, such as user input and
+window resize events. Upon calling this function, the calling thread will
+be put to sleep until any event appears in the event queue. When events
+are ready, the events will be processed just as they are processed by
+\textbf{glfwPollEvents}.
+
+If there are any events in the queue when the function is called, the
+function will behave exactly like \textbf{glfwPollEvents} (i.e. process
+all messages and then return, without blocking the calling thread).
+\end{refdescription}
+
+\begin{refnotes}
+It is guaranteed that \textbf{glfwWaitEvents} will wake up on any event
+that can be processed by \textbf{glfwPollEvents}. However,
+\textbf{glfwWaitEvents} may wake up on events that are \emph{not}
+processed or reported by \textbf{glfwPollEvents} too, and the function
+may behave differently on different systems. Do no make any assumptions
+about when or why \textbf{glfwWaitEvents} will return.
+\end{refnotes}
+
+
+%-------------------------------------------------------------------------
 \begin{table}[p]
 \begin{center}
 \begin{tabular}{|l|l|} \hline \raggedright
@@ -976,8 +1072,9 @@ modifier keys (shift, alt and control), the left version is used (e.g.
 GLFW\_KEY\_LSHIFT).
 
 A window must be opened for the function to have any effect, and
-\textbf{glfwPollEvents} or \textbf{glfwSwapBuffers} must be called before
-any keyboard events are recorded and reported by \textbf{glfwGetKey}.
+\textbf{glfwPollEvents}, \textbf{glfwWaitEvents} or
+\textbf{glfwSwapBuffers} must be called before any keyboard events are
+recorded and reported by \textbf{glfwGetKey}.
 \end{refnotes}
 
 
@@ -1008,9 +1105,9 @@ The function queries the current state of a specific mouse button.
 
 \begin{refnotes}
 A window must be opened for the function to have any effect, and
-\textbf{glfwPollEvents} or \textbf{glfwSwapBuffers} must be called before
-any mouse button events are recorded and reported by
-\textbf{glfwGetMouseButton}.
+\textbf{glfwPollEvents}, \textbf{glfwWaitEvents} or
+\textbf{glfwSwapBuffers} must be called before any mouse button events
+are recorded and reported by \textbf{glfwGetMouseButton}.
 \end{refnotes}
 
 
@@ -1050,8 +1147,9 @@ maximum number that can be represented by a signed integer (normally
 
 \begin{refnotes}
 A window must be opened for the function to have any effect, and
-\textbf{glfwPollEvents} or \textbf{glfwSwapBuffers} must be called before
-any mouse movements are recorded and reported by \textbf{glfwGetMousePos}.
+\textbf{glfwPollEvents}, \textbf{glfwWaitEvents} or
+\textbf{glfwSwapBuffers} must be called before any mouse movements are
+recorded and reported by \textbf{glfwGetMousePos}.
 \end{refnotes}
 
 
@@ -1109,9 +1207,9 @@ wheel or up/down stick on some mice.
 
 \begin{refnotes}
 A window must be opened for the function to have any effect, and
-\textbf{glfwPollEvents} or \textbf{glfwSwapBuffers} must be called before
-any mouse wheel movements are recorded and reported by
-\textbf{glfwGetMouseWheel}.
+\textbf{glfwPollEvents}, \textbf{glfwWaitEvents} or
+\textbf{glfwSwapBuffers} must be called before any mouse wheel movements
+are recorded and reported by \textbf{glfwGetMouseWheel}.
 \end{refnotes}
 
 
@@ -1182,7 +1280,8 @@ A window has to be opened for this function to have any effect.
 
 \begin{refnotes}
 Keyboard events are recorded continuously, but only reported when
-\textbf{glfwPollEvents} or \textbf{glfwSwapBuffers} is called.
+\textbf{glfwPollEvents}, \textbf{glfwWaitEvents} or
+\textbf{glfwSwapBuffers} is called.
 \end{refnotes}
 
 
@@ -1227,7 +1326,8 @@ A window has to be opened for this function to have any effect.
 
 \begin{refnotes}
 Character events are recorded continuously, but only reported when
-\textbf{glfwPollEvents} or \textbf{glfwSwapBuffers} is called.
+\textbf{glfwPollEvents}, \textbf{glfwWaitEvents} or
+\textbf{glfwSwapBuffers} is called.
 
 Control characters, such as tab and carriage return, are not reported to
 the character callback function, since they are not part of the Unicode
@@ -1282,7 +1382,8 @@ A window has to be opened for this function to have any effect.
 
 \begin{refnotes}
 Mouse button events are recorded continuously, but only reported when
-\textbf{glfwPollEvents} or \textbf{glfwSwapBuffers} is called.
+\textbf{glfwPollEvents}, \textbf{glfwWaitEvents} or
+\textbf{glfwSwapBuffers} is called.
 \end{refnotes}
 
 
@@ -1323,7 +1424,8 @@ A window has to be opened for this function to have any effect.
 
 \begin{refnotes}
 Mouse motion events are recorded continuously, but only reported when
-\textbf{glfwPollEvents} or \textbf{glfwSwapBuffers} is called.
+\textbf{glfwPollEvents}, \textbf{glfwWaitEvents} or
+\textbf{glfwSwapBuffers} is called.
 \end{refnotes}
 
 
@@ -1364,7 +1466,8 @@ A window has to be opened for this function to have any effect.
 
 \begin{refnotes}
 Mouse wheel events are recorded continuously, but only reported when
-\textbf{glfwPollEvents} or \textbf{glfwSwapBuffers} is called.
+\textbf{glfwPollEvents}, \textbf{glfwWaitEvents} or
+\textbf{glfwSwapBuffers} is called.
 \end{refnotes}
 
 
@@ -1461,8 +1564,8 @@ or if the joystick is not available, the unused elements in the
 
 \begin{refnotes}
 The joystick state is updated every time the function is called, so there
-is no need to call \textbf{glfwPollEvents} for joystick state to be
-updated.
+is no need to call \textbf{glfwPollEvents} or \textbf{glfwWaitEvents} for
+joystick state to be updated.
 
 Use \textbf{glfwGetJoystickParam} to retrieve joystick capabilities, such
 as joystick availability and number of supported axes.
@@ -1512,8 +1615,8 @@ joystick, or if the joystick is not available, the unused elements in the
 
 \begin{refnotes}
 The joystick state is updated every time the function is called, so there
-is no need to call \textbf{glfwPollEvents} for joystick state to be
-updated.
+is no need to call \textbf{glfwPollEvents} or \textbf{glfwWaitEvents} for
+joystick state to be updated.
 
 Use \textbf{glfwGetJoystickParam} to retrieve joystick capabilities, such
 as joystick availability and number of supported buttons.
@@ -2465,11 +2568,12 @@ When GLFW\_STICKY\_KEYS is enabled, keys which are pressed will not be
 released until they are physically released and checked with
 \textbf{glfwGetKey}. This behavior makes it possible to catch keys that
 were pressed and then released again between two calls to
-\textbf{glfwPollEvents} or \textbf{glfwSwapBuffers}, which would otherwise
-have been reported as released. Care should be taken when using this mode,
-since keys that are not checked with \textbf{glfwGetKey} will never be
-released. Note also that enabling GLFW\_STICKY\_KEYS does not affect the
-behavior of the keyboard callback functionality.
+\textbf{glfwPollEvents}, \textbf{glfwWaitEvents} or
+\textbf{glfwSwapBuffers}, which would otherwise have been reported as
+released. Care should be taken when using this mode, since keys that are
+not checked with \textbf{glfwGetKey} will never be released. Note also
+that enabling GLFW\_STICKY\_KEYS does not affect the behavior of the
+keyboard callback functionality.
 
 When GLFW\_STICKY\_KEYS is disabled, the status of a key that is reported
 by \textbf{glfwGetKey} is always the physical state of the key. Disabling
@@ -2483,12 +2587,12 @@ When GLFW\_STICKY\_MOUSE\_BUTTONS is enabled, mouse buttons that are
 pressed will not be released until they are physically released and
 checked with \textbf{glfwGetMouseButton}. This behavior makes it
 possible to catch mouse buttons which were pressed and then released again
-between two calls to \textbf{glfwPollEvents} or \textbf{glfwSwapBuffers},
-which would otherwise have been reported as released. Care should be taken
-when using this mode, since mouse buttons that are not checked with
-\textbf{glfwGetMouseButton} will never be released. Note also that
-enabling GLFW\_STICKY\_MOUSE\_BUTTONS does not affect the behavior of the
-mouse button callback functionality.
+between two calls to \textbf{glfwPollEvents}, \textbf{glfwWaitEvents} or
+\textbf{glfwSwapBuffers}, which would otherwise have been reported as
+released. Care should be taken when using this mode, since mouse buttons
+that are not checked with \textbf{glfwGetMouseButton} will never be
+released. Note also that enabling GLFW\_STICKY\_MOUSE\_BUTTONS does not
+affect the behavior of the mouse button callback functionality.
 
 When GLFW\_STICKY\_MOUSE\_BUTTONS is disabled, the status of a mouse
 button that is reported by \textbf{glfwGetMouseButton} is always the
